[gd_scene load_steps=6 format=3 uid="uid://cg1a470gxcuki"]

[ext_resource type="Script" path="res://screens/char_name.gd" id="1_1a3dr"]
[ext_resource type="Texture2D" uid="uid://d0ksnpb5c0kin" path="res://assets/ui/TitleScreenBackground.png" id="2_p0p5h"]
[ext_resource type="FontFile" uid="uid://c2a4jy82svlgh" path="res://assets/fonts/CheerfulMorning.otf" id="3_1urbj"]
[ext_resource type="Texture2D" uid="uid://b1qeebfqyyamw" path="res://assets/player/char2.png" id="5_n3w7i"]
[ext_resource type="AudioStream" uid="uid://c0y81f1sn83q3" path="res://assets/sounds/Title.mp3" id="5_spxqx"]

[node name="CharName" type="CanvasLayer"]
script = ExtResource("1_1a3dr")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -100.0
offset_right = 1920.0
offset_bottom = 1180.0
texture = ExtResource("2_p0p5h")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -384.0
offset_top = 135.0
offset_right = 397.0
offset_bottom = 235.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("3_1urbj")
theme_override_font_sizes/font_size = 100
text = "Qual seu nome?"

[node name="CharsContainer" type="HBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -384.0
offset_right = 612.0
offset_bottom = 384.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 39

[node name="TextureRect" type="TextureRect" parent="CharsContainer"]
layout_mode = 2
texture = ExtResource("5_n3w7i")

[node name="StartGameButton" type="Button" parent="."]
offset_left = 1560.0
offset_top = 924.0
offset_right = 1832.0
offset_bottom = 1032.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_1urbj")
theme_override_font_sizes/font_size = 100
text = "Iniciar"

[node name="BackButton" type="Button" parent="."]
offset_left = 100.0
offset_top = 924.0
offset_right = 372.0
offset_bottom = 1032.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_1urbj")
theme_override_font_sizes/font_size = 100
text = "Voltar"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 631.0
offset_top = 255.0
offset_right = 1103.0
offset_bottom = 343.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_1urbj")
theme_override_font_sizes/font_size = 80
placeholder_text = "Seu nome"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_spxqx")
volume_db = -15.0

[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
